Rubens code added, no tasks done yet
git-svn-id: https://opencast.jira.com/svn/MH/trunk@4095 e6edf6fb-f266-4316-afb4-e53d95876a76